--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -38,6 +38,13 @@
             <version>5.19.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>4.0.0-M1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
