--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>json</artifactId>
             <version>20250517</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.14.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
