--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -36,7 +36,11 @@
             <artifactId>commons-csv</artifactId>
             <version>1.14.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>3.2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
