Add WireMock dependency to Maven pom.xml for testing purposes

--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>datafaker</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+            <version>3.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
