Configure Google Java Format in Spotless Maven plugin for consistent code formatting

--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -92,6 +92,7 @@
         <version>${spotless.version}</version>
         <configuration>
           <java>
+            <googleJavaFormat/>
             <formatAnnotations/>
             <removeUnusedImports/>
             <forbidWildcardImports/>
