--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -78,6 +78,12 @@
       <artifactId>spotless-maven-plugin</artifactId>
       <version>${spotless.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
+      <version>3.5.7</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
