--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
       <version>26.3.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.instancio</groupId>
+      <artifactId>instancio-junit</artifactId>
+      <version>6.0.0-RC1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
